Add Azure deployment configuration and comprehensive Q&A documentation
- Add Azure deployment scripts (deploy-code-to-azure.ps1)
- Add startup.sh for Azure App Service
- Add comprehensive PROJECT_QA_RESPONSES.md covering all 10 Q&A topics
- Add Azure-specific settings (azure_settings.py, middleware.py)
- Update Django settings for Azure production deployment
- Add deployment documentation and migration scripts
- Update requirements.txt with production dependencies
- Add sensitive files to .gitignore (credentials, .env files excluded)

--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,12 @@ Thumbs.db
 *.swo
 *~
 .vscode/
+
+# Deployment credentials and sensitive files
+deployment-credentials.txt
+deployment-credentials-FINAL.txt
+deployment-info.txt
+deploy.zip
+.env.azure
+*.env.azure
+*credentials*.txt
